h1. 0.5.1 (not yet released)

* [#46] A user with unconfirmed email who resets password now confirms email.
(Marcel Görner)
* Refactored user_from_cookie, user_from_session, User#authenticate to use
more direct return code instead of ugly, harder to read ternary. (Dan Croak)

h2. 0.5.0 (2/27/2009)

* Fixed problem with Cucumber features. (Dan Croak)
* Fixed mising HTTP fluency use case. (Dan Croak)
* Refactored User#update_password to take just parameters it needs. (Dan
Croak)
* Refactored User unit tests to be more readable. (Dan Croak)

h2. 0.4.9 (2/20/2009)

* Protect passwords & confirmations actions with forbidden filters. (Dan Croak)
* Return 403 Forbidden status code in those cases. (Tim Pope)
* Test 403 Forbidden status code in Cucumber feature. (Dan Croak, Joe Ferris)
* Raise custom ActionController::Forbidden error internally. (Joe Ferris, Mike Burns, Jason Morrison)
* Test ActionController::Forbidden error is raised in functional test. (Joe Ferris, Mike Burns, Dan Croak)
* [#45] Fixed bug that allowed anyone to edit another user's password (Marcel Görner)
* Required Factory Girl >= 1.2.0. (Dan Croak)

h2. 0.4.8 (2/16/2009)

* Added support paths for Cucumber. (Ben Mabey)
* Added documentation for the flash. (Ben Mabey)
* Generators require "test_helper" instead of File.join. for rr compatibility. (Joe Ferris)
* Removed interpolated email address from flash message to make i18n easier. (Bence Nagy)
* Standardized flash messages that refer to email delivery. (Dan Croak)

h2. 0.4.7 (2/12/2009)

* Removed Clearance::Test::TestHelper so there is one less setup step. (Dan Croak)
* All test helpers now in shoulda_macros. (Dan Croak)

h2. 0.4.6 (2/11/2009)

* Made the modules behave like mixins again. (hat-tip Eloy Duran)
* Created Actions and PrivateMethods modules on controllers for future RDoc reasons. (Dan Croak, Joe Ferris)

h2. 0.4.5 (2/9/2009)

* [#43] Removed email downcasing because local-part is case sensitive per RFC5321. (Dan Croak)